# muatsimpan

./: .gitignore  LICENSE  Package.swift  README.md
.github/workflows/: windows-build.yml
Sources/Musim/: MusimApp.swift
Sources/Musim/Engine/: DownloadManager.swift  LibraryStore.swift  ReportLogger.swift  YtDlp.swift
Sources/Musim/Models/: AppSettings.swift  Greetings.swift  Localization.swift  Models.swift
Sources/Musim/Views/: ActivityDock.swift  ActivityPanel.swift  ArchiveStatsView.swift  DesignSystem.swift  DownloadPanel.swift  HowToView.swift  LibraryView.swift  MainView.swift  OnboardingView.swift  PlayerView.swift  PreDownloadSheet.swift  RichTextEditor.swift  (+2 more)
landing/: build.py  config.js  index.html
legal/: NOTICE.md  PRIVACY.md
musim-motion/: DELIVERABLES.md  DESIGN.md  STORYBOARD.md  TIMELINE.md  index.html  meta.json  package.json
musim-motion/vertical/: index.html
scripts/: bundle.sh  make-icon.swift
website/: tsconfig.tsbuildinfo
website/.openai/: hosting.json
website/app/: globals.css  layout.tsx  page.tsx
website/public/: privacy.md  terms.md
windows/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
windows/scripts/: build.ps1  fetch-binaries.ps1
windows/src/: App.tsx  api.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/binaries/: .gitkeep
windows/src-tauri/capabilities/: default.json
windows/src-tauri/icons/: icon.icns
windows/src-tauri/src/: commands.rs  download.rs  lib.rs  library.rs  main.rs  models.rs  report.rs  settings.rs  state.rs  ytdlp.rs
(+27 files in other folders)
