[package]
name = "musim"
version = "1.0.0"
description = "Musim — Muat + Simpan. Native video/audio downloader."
authors = ["Musim"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "musim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
walkdir = "2"
trash = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
